// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Symbol /> from .bob file > matches snapshot (using fallback symbol) 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-lj78bd"
  >
    <img
      src="img 1.gif"
      style="display: block; transform: rotate(0deg) scaleX(1) scaleY(1); object-fit: contain; object-position: top left; opacity: 1;"
    />
  </div>
</DocumentFragment>
`;

exports[`<Symbol /> from .bob file > matches snapshot (with index) 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-lj78bd"
  >
    <img
      src="img 3.svg"
      style="display: block; transform: rotate(0deg) scaleX(1) scaleY(1); object-fit: contain; object-position: top left; opacity: 1;"
    />
  </div>
</DocumentFragment>
`;

exports[`<Symbol /> from .bob file > matches snapshot (with rotation) 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-lj78bd"
  >
    <img
      src="img 1.gif"
      style="display: block; transform: rotate(45deg) scaleX(1) scaleY(1); object-fit: contain; object-position: top left; opacity: 1;"
    />
  </div>
</DocumentFragment>
`;

exports[`<Symbol /> from .bob file > matches snapshot (without index) 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-lj78bd"
  >
    <img
      src="img 1.gif"
      style="display: block; transform: rotate(0deg) scaleX(1) scaleY(1); object-fit: contain; object-position: top left; opacity: 1;"
    />
  </div>
</DocumentFragment>
`;

exports[`<Symbol /> from .opi file > matches snapshot (with rotation) 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-lj78bd"
  >
    <img
      src="img 1.gif"
      style="display: block; transform: rotate(45deg) scaleX(1) scaleY(1); object-fit: contain; object-position: top left; opacity: 1;"
    />
  </div>
</DocumentFragment>
`;

exports[`<Symbol /> from .opi file > matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-lj78bd"
  >
    <img
      src="img 1.gif"
      style="display: block; transform: rotate(0deg) scaleX(1) scaleY(1); object-fit: contain; object-position: top left; opacity: 1;"
    />
  </div>
  <div
    class="_SymbolLabel_9fad35 MuiBox-root css-0"
    style="background-color: rgb(0, 0, 0); border-style: solid; border-width: 1px; border-color: green; border-radius: 0px; align-items: center; justify-content: center;"
  >
    <div
      style="padding: 5%;"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 css-148chd6-MuiTypography-root"
      >
        Fake value
      </p>
    </div>
  </div>
</DocumentFragment>
`;
